# grove

./: .gitignore  .gitmodules  Cargo.toml  Justfile  deny.toml
.config/: nextest.toml
.github/: renovate.json
.github/workflows/: ci.yml  pages.yml
crates/grove-web/: Cargo.toml
crates/grove-web/src/: lib.rs
crates/grove-web/www/: main.js
patches/: 0001-widen-resize-handle-hit-area.patch
src/: app.rs  assets.rs  fs.rs  icons.rs  lib.rs  main.rs  model.rs  theme.rs
src/ui/: column_table.rs  file_list.rs  file_table.rs  mod.rs  sidebar.rs  status_bar.rs  toolbar.rs
www/: index.html  main.js
