[package]
name = "grove"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
futures = "0.3.32"
gpui = "*"
jiff = "0.2.23"
lru = "0.16.3"
open = "5.3.3"
rayon = "1.11.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.dev.package."*"]
opt-level = 2
