[workspace]
members = ["crates/grove-web"]

[package]
name = "grove"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
futures = "0.3.32"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland"] }
jiff = "0.2.23"
lru = "0.16.3"
open = "5.3.3"
rayon = "1.11.0"
rust-embed = "8.11.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[patch.crates-io]
psm = { git = "https://github.com/rust-lang/stacker", branch = "master" }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.dev.package."*"]
opt-level = 2
