[package]
name = "grove"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
gpui = { git = "https://github.com/zed-industries/zed", rev = "c372f24" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "c372f24", features = ["font-kit", "x11", "wayland"] }
lru = "0.16.3"
rust-embed = "8.11.0"
tracing = "0.1.44"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6.0.0"
jiff = "0.2.23"
open = "5.3.3"
rayon = "1.11.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.117"
web-sys = { version = "0.3.94", features = ["Document", "Element", "HtmlElement", "Window"] }

[patch.crates-io]
psm = { git = "https://github.com/rust-lang/stacker", branch = "master" }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.dev.package."*"]
opt-level = 2
