[package]
name = "grove-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
wasm-bindgen = "0.2.117"
web-time = "1"
tracing = "0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
gpui_web = { git = "https://github.com/zed-industries/zed" }
console_error_panic_hook = "0.1"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
